[package]
name = "yotsubot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99" }
chrono = { version = "0.4.41" }
poise = { version = "0.6.1" }
shuttle-runtime = { version = "0.56.0" }
shuttle-serenity = { version = "0.56.0" }
tracing = { version = "0.1.37" }
tokio = { version = "1.47.1", features = ["full"] }
